other-mpol/add-emptydir-sizelimit/.chainsaw-test/exception/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: exception-pod
  namespace: default
spec:
  automountServiceAccountToken: false
  containers: [{name: app, image: busybox:1.35, volumeMounts: [{name: work, mountPath: /work}]}]
  volumes: [{name: work, emptyDir: {}}]
