other-mpol/add-emptydir-sizelimit/.chainsaw-test/exception/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: add-emptydir-sizelimit-exception
spec:
  steps:
  - try:
    - apply:
        resource: {apiVersion: v1, kind: Namespace, metadata: {name: policy-exceptions}}
    - apply: {file: ../../add-emptydir-sizelimit.yaml}
    - apply: {file: exception.yaml}
    - sleep: {duration: 15s}
    - apply: {file: pod.yaml}
    - assert: {file: pod-unchanged.yaml}
